# orderMatchingEngine

./: .gitignore  CMakeLists.txt  DockerFile  README.md
.cache/clangd/index/: main.cpp.D58331D9E899854F.idx  matching_engine.cpp.15CFAA0F09EABD3D.idx  matching_engine.h.A3FD919B5F41F92F.idx  order.h.04A167EB443877B7.idx  order_book.cpp.E912861C40C21831.idx  order_book.h.B9133ACCC8EF1C2B.idx  types.h.E97458B9564DE541.idx
benchmarks/: perf_benchmark.cpp
client/: marketMaker.py  s_client.py  stress_test.py  trader_ui.py
docs/: DESIGN.md
gateway/: gateway.py
include/: client_gateway.h  config.h  matching_engine.h  object_pool.h  order.h  order_book.h  protocol.h  tcp_server.h  types.h
logging/: logger.cpp  logger.hpp
proto/: trading.proto
src/: client_gateway.cpp  main.cpp  matching_engine.cpp  order_book.cpp  tcp_server.cpp
tests/: test_matching_engine.cpp
